Fixed border gap distance in FB box

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,6 +151,10 @@ body span#sunday-hours-label {
 	margin-left: -5px;
 }
 
+#fb_box {
+	margin-bottom: -6px;
+}
+
 #instagram-header {
 	text-align: center;
 	margin-bottom: 30px;
